--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,23 +11,30 @@ set(CMAKE_CXX_FLAGS "-W -Wall -Wno-unused-parameter -Werror")
 
 # find packages
 find_package(OpenGL REQUIRED)
-find_package(glew REQUIRED)
 find_package(PkgConfig REQUIRED)
 
+# find glew somewhere else when on apple
+find_package(GLEW REQUIRED)
+if (GLEW_FOUND)
+    include_directories(${GLEW_INCLUDE_DIRS})
+endif ()
+
+# use pkg-config to find further libs
 pkg_check_modules(GLFW REQUIRED glfw3)
+pkg_check_modules(GLM REQUIRED glm)
+
 
 # libraries
 set(ALL_LIBS
         ${OPENGL_LIBRARIES}
-        ${GLUT_LIBRARY}
         ${GLFW_STATIC_LIBRARIES}
-        ${GLEW_LIBRARY})
+        ${GLEW_LIBRARIES})
 
 # specify executable
 add_executable(glwarp main.cpp)
 
 # get include directories
-include_directories(${GLFW_INCLUDE_DIRS})
+include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INLCUDE_DIRS} ${GLM_INCLUDE_DIRS})
 
 target_link_libraries(glwarp ${ALL_LIBS})
 
