--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,12 @@ set(GLWARP_VERISION_MINOR 1)
 
 # compiler flags
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "-W -Wall -Wno-unused-parameter -Werror")
+set(CMAKE_CXX_FLAGS "-W -Wall")
 
 # find packages
 find_package(OpenGL REQUIRED)
 find_package(PkgConfig REQUIRED)
+find_package(X11 REQUIRED)
 
 # find glew somewhere else when on apple
 find_package(GLEW REQUIRED)
@@ -23,18 +24,18 @@ endif ()
 pkg_check_modules(GLFW REQUIRED glfw3)
 pkg_check_modules(GLM REQUIRED glm)
 
-
 # libraries
 set(ALL_LIBS
         ${OPENGL_LIBRARIES}
         ${GLFW_STATIC_LIBRARIES}
-        ${GLEW_LIBRARIES})
+        ${GLEW_LIBRARIES}
+        ${X11_LIBRARIES})
 
 # specify executable
 add_executable(glwarp main.cpp)
 
 # get include directories
-include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INLCUDE_DIRS} ${GLM_INCLUDE_DIRS})
+include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INLCUDE_DIRS} ${GLM_INCLUDE_DIRS} ${X11_INCLUDE_DIRS})
 
 target_link_libraries(glwarp ${ALL_LIBS})
 
