--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,15 +25,26 @@ pkg_check_modules(GLFW REQUIRED glfw3)
 
 set(SOURCE_FILES
         main.cpp
-        src/shader.cpp)
+        src/shader.cpp
+        src/json11.cpp
+        src/input_parser.cpp
+        src/texture.cpp)
 
 set(HEADER_FILES
-        inc/shader.h)
+        inc/shader.h
+        inc/json11.hpp
+        inc/input_parser.h
+        src/texture.cpp)
 
 # file config
 configure_file(shader/simple.vert ${CMAKE_CURRENT_BINARY_DIR}/shader/simple.vert COPYONLY)
 configure_file(shader/simple.frag ${CMAKE_CURRENT_BINARY_DIR}/shader/simple.frag COPYONLY)
 configure_file(tex/radialgrid.bmp ${CMAKE_CURRENT_BINARY_DIR}/tex/radialgrid.bmp COPYONLY)
+
+configure_file(default/model.json ${CMAKE_CURRENT_BINARY_DIR}/default/model.json COPYONLY)
+configure_file(default/default.mesh ${CMAKE_CURRENT_BINARY_DIR}/default/default.mesh COPYONLY)
+configure_file(default/default.tex ${CMAKE_CURRENT_BINARY_DIR}/default/default.tex COPYONLY)
+
 
 # libraries
 set(ALL_LIBS
